--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Beginning Site</title>
-        <link src="../CSS/index.css"rel="stylesheet">
+        <link src="./index.css"rel="stylesheet">
     </head>
     <body>
         <h1>Card Searching Tool</h1>
