--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Beginning Site</title>
         <link src="./index.css"rel="stylesheet">
+        
     </head>
     <body>
-        <h1>Card Searching Tool</h1>
+        <h1 id="title">Card Searching Tool</h1>
         <div id="menuSection">
             <p>Here is some text.... there will most likely be images/menu bar here</p>
         </div>
